--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "nodemon": "^3.1.11"
   },
   "dependencies": {
+    "connect-timeout": "^1.9.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^13.0.0"
   }
 }
